[build-system]
requires = [
    "setuptools >= 61.0",
    "wheel",
    "cython",
]
build-backend = "setuptools.build_meta"

[project]
name = "vpdq"
authors = [{name = "Meta", email = "threatexchange@meta.com"}]
description = "Python bindings for Facebook VPDQ hash"
requires-python = ">= 3.8"
readme = {file = "python/README.md", content-type = "text/markdown"}
license = {file = "LICENSE.txt"}
dynamic = ["version", "scripts", "entry-points"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["python"]  # list of folders that contain the packages (["."] by default)
include = ["vpdq.pyx"]  # package names should match these glob patterns (["*"] by default)
exclude = []  # exclude packages matching these glob patterns (empty by default)
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)

[tool.cibuildwheel]
skip = [
    # Skip 32-bit builds
    "*-win32",
    "*-manylinux_i686",
    # Skip musllinux.
    # yum is not found on musllinux. TODO: See if vpdq and dependencies build with musllinux and override before-build for it.
    "*-musllinux*"
    # Disable building PyPy wheels on all platforms.
    "pp*"
]

# This runs tests to make sure it built correctly.
# test-requires = "pytest"
# test-command = "pytest ThreatExchange/vpdq/tests"

[tool.cibuildwheel.linux]
before-build = [
    "yum update -y",
    "yum install epel-release -y", # This should already be installed, but install it anyway.
    "yum localinstall --nogpgcheck https://download1.rpmfusion.org/free/el/rpmfusion-free-release-7.noarch.rpm -y", # This repo has ffmpeg and ffmpeg-devel
    "yum install -y ffmpeg-devel"
]
